[gd_scene load_steps=8 format=3 uid="uid://c1af3h23bqbvv"]

[ext_resource type="Script" uid="uid://bsonh03rfuf2p" path="res://combined_scripts/drag_component.gd" id="1_1hguf"]
[ext_resource type="Script" uid="uid://n4l5a5hvyrld" path="res://combined_scripts/scoopula.gd" id="1_a840k"]
[ext_resource type="Script" uid="uid://p0x2f70nn1sy" path="res://combined_scripts/selectable_canvas_group.gd" id="2_g0l2j"]
[ext_resource type="Texture2D" uid="uid://yrxt2sxidd3c" path="res://Images/FillSprites/scoopula_fill.png" id="4_g0l2j"]
[ext_resource type="Texture2D" uid="uid://cak418sbeesy5" path="res://updated_assets/lab_objects/scoopula.svg" id="4_sbaom"]
[ext_resource type="Script" uid="uid://bpxiht7xu8mss" path="res://combined_scripts/interactable_component.gd" id="5_sbaom"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbaom"]
size = Vector2(21, 24)

[node name="Scoopula" type="RigidBody2D"]
script = ExtResource("1_a840k")

[node name="DragComponent" type="Node2D" parent="." node_paths=PackedStringArray("body", "interact_canvas_group")]
script = ExtResource("1_1hguf")
body = NodePath("..")
interact_canvas_group = NodePath("../SelectableCanvasGroup")
metadata/_custom_type_script = "uid://bsonh03rfuf2p"

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2(1.17049, -0.238485)
polygon = PackedVector2Array(7.82951, -34.7615, 2.82951, -29.7615, 1.82951, -26.7615, 1.82951, -23.7615, 1.82951, 56.2385, -3.17049, 56.2385, -3.17049, -27.7615, -4.17049, -29.7615, -7.17049, -32.7615, -9.17049, -34.7615, -10.1705, -37.7615, -10.1705, -46.7615, -10.1705, -52.7615, -9.17049, -54.7615, -7.17049, -55.7615, 5.82951, -55.7615, 7.82951, -54.7615, 8.82951, -53.7615, 8.82951, -51.7615, 8.82951, -37.7615)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, -45)
shape = SubResource("RectangleShape2D_sbaom")

[node name="SelectableCanvasGroup" type="CanvasGroup" parent="."]
script = ExtResource("2_g0l2j")
metadata/_custom_type_script = "uid://p0x2f70nn1sy"

[node name="Sprite2D" type="Sprite2D" parent="SelectableCanvasGroup"]
position = Vector2(-7, 0)
scale = Vector2(0.15, 0.15)
texture = ExtResource("4_sbaom")

[node name="InteractionComponent" type="Node2D" parent="."]
script = ExtResource("5_sbaom")

[node name="FillSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-9.96848, 48.937)
rotation = -1.31423
scale = Vector2(0.0196264, 0.0156335)
texture = ExtResource("4_g0l2j")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchor_left = -0.035
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 44.8
offset_right = -1240.0
offset_bottom = -680.0

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 14.0
offset_top = 569.0
offset_right = 311.0
offset_bottom = 713.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Volume (mL)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="sliderDispenseQty" type="HSlider" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 2.0
step = 0.01

[node name="lblDispenseQty" type="Label" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "0"

[node name="btnScoop" type="Button" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Scoop"

[node name="btnDispense" type="Button" parent="CanvasLayer/Control/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Dispense"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="value_changed" from="CanvasLayer/Control/PanelContainer/VBoxContainer/sliderDispenseQty" to="." method="_on_slider_dispense_qty_value_changed"]
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/VBoxContainer/btnScoop" to="." method="_on_btn_scoop_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/PanelContainer/VBoxContainer/btnDispense" to="." method="_on_btn_dispense_pressed"]
